package ar.edu.utn.ba.ddsi.climalert.entidades;

public class AlertaEvento {
    private String mensaje;
    private ClimaData climaData;
}
