package ar.edu.utn.ba.ddsi.climalert.entidades;

import java.time.LocalDateTime;

public class ClimaData {
    private Long id;
    private Double temperatura;
    private Double humedad;
    private LocalDateTime timestamp;
    private String ubicacion;
}
